--- a/tic-tac-toe/src/app/app.component.html
+++ b/tic-tac-toe/src/app/app.component.html
@@ -1,13 +1,17 @@
 
-<div *ngFor="let line of grid" style=>
+<div *ngFor="let line of grid;let indexLine = index;" >
 
   <div style="display: flex;">
-    <div *ngFor="let row of line "
+    <div *ngFor="let row of line;let indexColumn=index"
          style="
                 width:100px;
                 height:100px;
                 border:1px solid black;
-               ">
+               "
+          (click)="changeGrid(indexLine,indexColumn)">
+               <div *ngIf="grid[indexLine][indexColumn]">X</div>
+               <div *ngIf="grid[indexLine][indexColumn]===false">0</div>
+
     </div>
   </div>
 </div>
