--- a/tic-tac-toe/src/app/app.component.html
+++ b/tic-tac-toe/src/app/app.component.html
@@ -1,7 +1,9 @@
 
+<div class="line antidiag" *ngIf="boardState.gameOver"></div>
 <div *ngFor="let line of boardState.grid;let indexLine = index;" >
 
   <div style="display: flex;">
+
     <div *ngFor="let row of line;let indexColumn=index"
          style="
                 width:100px;
@@ -22,5 +24,7 @@
     </div>
   </div>
 </div>
+
+
 
 <div (click)="boardState.resetBoardState()">RESET</div>
