--- a/tic-tac-toe/src/app/app.component.html
+++ b/tic-tac-toe/src/app/app.component.html
@@ -1,4 +1,17 @@
-<div class="line antidiag" *ngIf="boardState.gameOver"></div>
+<div class="line"
+    *ngIf="boardState.gameOver"
+    [ngClass]="{
+    'col1':(boardState.wonBy[0]==='col'&&boardState.wonBy[1]==0),
+    'col2':(boardState.wonBy[0]==='col'&&boardState.wonBy[1]==1),
+    'col3':(boardState.wonBy[0]==='col'&&boardState.wonBy[1]==2),
+    'row1':(boardState.wonBy[0]==='row'&&boardState.wonBy[1]==0),
+    'row2':(boardState.wonBy[0]==='row'&&boardState.wonBy[1]==1),
+    'row3':(boardState.wonBy[0]==='row'&&boardState.wonBy[1]==2),
+
+    'diag':(boardState.wonBy[0]==='diag'),
+    'antidiag':(boardState.wonBy[0]==='antidiag')
+
+    }"></div>
 <div *ngFor="let line of boardState.grid;let indexLine = index;">
 
   <div style="display: flex;">
